fix code mirror layout on mobile

--- a/src-docs/public/main.css
+++ b/src-docs/public/main.css
@@ -400,3 +400,7 @@ article a {
   align-items: center;
   padding: 8px;
 }
+
+.mdw-is-mobile code-mirror {
+  display: inline;
+}
